[gd_scene load_steps=33 format=3 uid="uid://ba00kckmwvnjd"]

[ext_resource type="Script" path="res://sences/game_object/mimic_chest_enemy/mimic_chest_enemy.gd" id="1_0tfdh"]
[ext_resource type="PackedScene" uid="uid://desj4kc36oypm" path="res://sences/ability/suction_ability/suction_ability.tscn" id="2_bace7"]
[ext_resource type="Texture2D" uid="uid://8rhf51y10i8i" path="res://sences/game_object/mimic_chest_enemy/box_01.png" id="2_wlsni"]
[ext_resource type="PackedScene" uid="uid://6uf5bn1m7x3a" path="res://sences/component/hurtbox_component.tscn" id="3_3875w"]
[ext_resource type="Texture2D" uid="uid://cu7etlrdxm3od" path="res://sences/game_object/mimic_chest_enemy/box_02.png" id="3_uhwdh"]
[ext_resource type="Texture2D" uid="uid://borvg3nhw1cre" path="res://sences/game_object/mimic_chest_enemy/box_03.png" id="4_5vy62"]
[ext_resource type="PackedScene" uid="uid://drpkwiqnedh6p" path="res://sences/component/health_component.tscn" id="4_6uj3t"]
[ext_resource type="Texture2D" uid="uid://cv6feku5wmo" path="res://sences/game_object/mimic_chest_enemy/box_04.png" id="5_ckyp4"]
[ext_resource type="Texture2D" uid="uid://d031bp18q3sv8" path="res://sences/game_object/mimic_chest_enemy/box_05.png" id="6_dihla"]
[ext_resource type="Texture2D" uid="uid://dugba6eqs30xg" path="res://sences/game_object/mimic_chest_enemy/box_06.png" id="7_i2oky"]
[ext_resource type="PackedScene" uid="uid://buohpvp830bq8" path="res://sences/component/velocity_component.tscn" id="9_2lbn5"]
[ext_resource type="PackedScene" uid="uid://nbuwpnbqs8fk" path="res://sences/component/vial_drop_component.tscn" id="10_00k64"]
[ext_resource type="PackedScene" uid="uid://bdp4gbuiabe2f" path="res://sences/component/hit_flash_component.tscn" id="13_3po21"]
[ext_resource type="PackedScene" uid="uid://cp6u3727enecb" path="res://sences/component/random_stream_player_2d_component.tscn" id="14_kr21g"]
[ext_resource type="Shader" path="res://sences/component/hit_flash_component.gdshader" id="14_wnl8m"]
[ext_resource type="PackedScene" uid="uid://bgd540jvuom26" path="res://sences/component/death_component.tscn" id="15_4w6ds"]
[ext_resource type="AudioStream" uid="uid://cw8i0jswtjebd" path="res://asserts/audio/footstep_carpet_000.ogg" id="15_koosa"]
[ext_resource type="AudioStream" uid="uid://b52bc4ke5iq3n" path="res://asserts/audio/footstep_carpet_001.ogg" id="16_hcoov"]
[ext_resource type="AudioStream" uid="uid://8d8ahesn1t1w" path="res://asserts/audio/footstep_carpet_002.ogg" id="17_3vya5"]
[ext_resource type="AudioStream" uid="uid://b4ppvtwnyb0cl" path="res://asserts/audio/footstep_carpet_003.ogg" id="18_q6nmk"]
[ext_resource type="AudioStream" uid="uid://bm07bn1607l7a" path="res://asserts/audio/footstep_carpet_004.ogg" id="19_ylog7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_w0or8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wlsni")
}, {
"duration": 1.0,
"texture": ExtResource("3_uhwdh")
}, {
"duration": 1.0,
"texture": ExtResource("4_5vy62")
}, {
"duration": 1.0,
"texture": ExtResource("5_ckyp4")
}, {
"duration": 1.0,
"texture": ExtResource("6_dihla")
}, {
"duration": 1.0,
"texture": ExtResource("7_i2oky")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_g13b4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/AnimatedSprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_v3amh"]
resource_name = "chase"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, -0.261799, 0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -12), Vector2(0, -10), Vector2(0, -8), Vector2(0, -8), Vector2(0, -12), Vector2(0, -10), Vector2(0, -8), Vector2(0, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/AnimatedSprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.2), Vector2(1.2, 0.9), Vector2(0.9, 1.2), Vector2(1.2, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_64hck"]
resource_name = "idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_koa8s"]
resource_name = "sleep"
length = 0.6
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.29, 0.38, 0.475, 0.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 4, 3, 2, 1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.56, 0.59, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [true],
"method": &"set_play_state"
}, {
"args": [false],
"method": &"set_chasing_state"
}, {
"args": [],
"method": &"play_idle"
}, {
"args": [false],
"method": &"set_play_state"
}]
}

[sub_resource type="Animation" id="Animation_yvxjf"]
resource_name = "wakeup"
length = 0.6
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.150313, 0.233333, 0.333333, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.59, 0.595, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [true],
"method": &"set_play_state"
}, {
"args": [false],
"method": &"set_play_state"
}, {
"args": [],
"method": &"play_chase"
}, {
"args": [true],
"method": &"set_chasing_state"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2g8gq"]
_data = {
"RESET": SubResource("Animation_g13b4"),
"chase": SubResource("Animation_v3amh"),
"idle": SubResource("Animation_64hck"),
"sleep": SubResource("Animation_koa8s"),
"wakeup": SubResource("Animation_yvxjf")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j826i"]
resource_local_to_scene = true
shader = ExtResource("14_wnl8m")
shader_parameter/lerp_percent = 0.0
shader_parameter/outline_color = Color(0.996078, 0.156863, 0.431373, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8njnv"]
shader = ExtResource("14_wnl8m")
shader_parameter/lerp_percent = null
shader_parameter/outline_color = Color(0, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_m8w83"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6nnym"]
radius = 6.0

[node name="MimicChestEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_0tfdh")
wake_up_range = 100.0
sleep_range = 150.0

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_w0or8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2g8gq")
}
autoplay = "idle"

[node name="HealthComponent" parent="." instance=ExtResource("4_6uj3t")]
unique_name_in_owner = true
max_health = 50.0

[node name="VelocityComponent" parent="." instance=ExtResource("9_2lbn5")]
max_speed = 60

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_compoent") instance=ExtResource("10_00k64")]
drop_percent = 1.0
health_compoent = NodePath("../HealthComponent")

[node name="SuctionAbility" parent="." instance=ExtResource("2_bace7")]
suction_range = 150.0
suction_strength = 20.0

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("15_4w6ds")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("13_3po21")]
material = SubResource("ShaderMaterial_j826i")
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_8njnv")

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("14_kr21g")]
volume_db = 10.0
streams = Array[AudioStream]([ExtResource("15_koosa"), ExtResource("16_hcoov"), ExtResource("17_3vya5"), ExtResource("18_q6nmk"), ExtResource("19_ylog7")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_3875w")]
unique_name_in_owner = true
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_m8w83")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_6nnym")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -8)
texture = ExtResource("7_i2oky")
